# Hybrid_paralell_graph_using_openmp_-_MPI_

./: CMakeLists.txt  PROJECT_EXPLANATION.md  PROJECT_PIPELINE.md  README.md  requirements.txt
dashboard/: app.py
data/: README.md  test_graph.txt
results/: benchmark.csv  benchmark_clean.csv
src/: benchmark.cpp  benchmark.hpp  graph_io.cpp  graph_io.hpp  main.cpp  parallel_bfs.cpp  parallel_bfs.hpp  partition.cpp  partition.hpp  serial_bfs.cpp  serial_bfs.hpp
